backend/get-task/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: get 
  template:
    metadata:
      labels:
        app: get 
    spec:
      containers:
      - name: getct
        image: devopsinsiders/micro-gettasks
        ports:
        - containerPort: 8000
